tests/parsing/smtlib/v2.7/errors/035_match_case_bad_pattern_2.expected
File "tests/parsing/smtlib/v2.7/errors/035_match_case_bad_pattern_2.smt2", line 3, character 41-43:
3 | (define-fun f ((x t)) t (match x ((A B) (as x))))
                                             ^^
Error while parsing a match case, read the reserved word 'as',
      but expected a pattern, i.e. either a symbol, '_',  or a datatype
      pattern of the form "(symbol symbol_+)" (with '_' also allowed); note
      that keywords and reserved words (such as 'lambda', 'as', ...) are not
      symbols, and thus are not allowed here.
